@@ -4,6 +4,7 @@ Date: ???
   Features:
     - Added 'Module' search option to search for modules in machines
     - Added arrow pointing from player to highlighted results
+    - 'All surfaces' checkbox is now hidden when there is only one surface in the game
     - Optimised search time by ≈20% when many search modes are enabled
   Bugfixes:
     - Fixed results not opening when viewing the map whilst in Navigation Satellite
